--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,9 +5,10 @@ body {
   font-size: larger;
 }
 
-h1 {
+section.results {
+  height: 10rem;
 }
 
-section.results {
-  height: 200px;
+h2.display-6 {
+  font-size: 1.7rem;
 }
