--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,9 @@
         </fieldset>    
     </form>
 
-    <section class="results border m-5"></section>
+    <section class="results border mx-5 my-4">
+        <h2 class = "display-6 m-2">Meaning of Word Searched:</h2>
+    </section>
     
 </form>
 </body>
