Update index.ejs footer

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,14 @@
             </ul>
         <% } %>
     </section>
-    
+    <footer class="bg-light text-center text-lg-start">
+    <!-- footer -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+             © 2021 Copyright:
+            <b><a class="text-dark" href="http://davedict2021.herokuapp.com/">Dave Dict</a></b>
+        </div>
+    <!-- End footer -->
+    </footer>
 </form>
 </body>
 </html>
