Push footer to bottom

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,10 +30,10 @@
             </ul>
         <% } %>
     </section>
-    <footer class="bg-light text-center text-lg-start">
+    <footer class="bg-light text-center text-lg-start d-inline-flex mt-5">
     <!-- footer -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-             © 2021 Copyright:
+             © 2022 Copyright:
             <b><a class="text-dark" href="http://davedict2021.herokuapp.com/">Dave Dict</a></b>
         </div>
     <!-- End footer -->
